--- a/bower.json
+++ b/bower.json
@@ -8,20 +8,11 @@
   ],
   "dependencies": {
     "purescript-prelude": "^3.1.1",
-    "purescript-web3": "^0.17.0",
-    "purescript-web3-generator": "git+https://github.com/f-o-a-m/purescript-web3-generator.git#0.17.2-beta",
-    "purescript-console": "^3.0.0",
-    "purescript-errors": "^3.0.0",
-    "purescript-node-process": "^5.0.0",
-    "purescript-debug": "^3.0.0",
-    "purescript-mkdirp": "git+https://github.com/f-o-a-m/purescript-mkdirp.git#v0.3.0",
-    "purescript-logging": "^2.0.0",
-    "purescript-now": "^3.0.0",
-    "purescript-validation": "^3.2.0"
+    "purescript-web3": "^0.17.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0",
-    "purescript-chanterelle": "git+https://github.com/f-o-a-m/chanterelle#v0.3.0",
+    "purescript-chanterelle": "git+https://github.com/f-o-a-m/chanterelle#815b5b0d08c7d72b8740327fcb44e16cdfba1ac0",
     "purescript-spec": "^2.0.0"
   }
 }
