--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0",
-    "purescript-chanterelle": "git+https://github.com/f-o-a-m/chanterelle#09b64b2075279f504075235f5e88c1930e1e4868",
+    "purescript-chanterelle": "git+https://github.com/f-o-a-m/chanterelle#v0.4.0",
     "purescript-spec": "^2.0.0"
   }
 }
