--- a/bower.json
+++ b/bower.json
@@ -8,11 +8,11 @@
   ],
   "dependencies": {
     "purescript-prelude": "^3.1.1",
-    "purescript-web3": "^0.17.0"
+    "purescript-web3": "^0.18.1"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0",
-    "purescript-chanterelle": "git+https://github.com/f-o-a-m/chanterelle#v0.4.0",
+    "purescript-chanterelle": "git+https://github.com/f-o-a-m/chanterelle#6908a5837fa50bb4e8307f548cce180f896590f8",
     "purescript-spec": "^2.0.0"
   }
 }
