--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bignumber.js": "git+https://github.com/frozeman/bignumber.js-nolookahead.git",
     "bower": "^1.8.2",
-    "crypto-js": "^3.1.8",
     "ethjs-provider-http": "^0.1.6",
     "mkdirp": "^0.5.1",
     "pulp": "^12.0.1",
     "purescript": "^0.11.7",
     "solc": "^0.4.21",
-    "zeppelin-solidity": "^1.7.0"
+    "zeppelin-solidity": "^1.7.0",
+    "bn.js": "^4.11.0",
+    "keccak": "^1.0.2",
+    "rlp": "^2.0.0",
+    "secp256k1": "^3.0.1"
   }
 }
